# gtest-action

./: .clang-format  .trivyignore  CMakeLists.txt  Dockerfile  README.md  action.yml  entrypoint.sh  format_all_code.bat  vcpkg.json
.github/: .zizmor.toml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/test-scenarios/: action.yml
.github/workflows/: build_docker_image.yml  build_docker_image_dry_run.yml  commitlint.yml  lint.yml  test_entrypoint_script.yml  test_released_action.yml
test/failing_unit_tests/: main.cpp
test/good_unit_tests/: main.cpp
test/working_unittest_project/: main.cpp
test/working_unittest_project_with_existing_cmake/: CMakeLists.txt
test/working_unittest_project_with_existing_cmake/tests/: CMakeLists.txt  dummy-test.cpp
